[package]
name = "flowrider"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "flowrider"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
byteorder = "1.5"
hex = "0.4"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "sync", "time"] }
xxhash-rust  = { version = "0.8", features = ["xxh3"] }
tempfile = "3"
moka = { version = "0.12", features = ["future"] }
futures = "0.3"
clap = { version = "4.5.40", features = ["derive"] }
async-recursion = "1.1.1"
libc = "0.2.174"
rand = "0.9.1"
