[package]
name = "flowrider"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "High-performance PyTorch-compatible streaming dataset with distributed caching for on-the-fly remote dataset fetching"
homepage    = "https://github.com/fpgaminer/flowrider"
repository  = "https://github.com/fpgaminer/flowrider"
readme      = "README.md"

[lib]
name = "flowrider"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
byteorder = "1.5"
hex = "0.4"
pyo3 = { version = "0.28.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2.5", features = ["serde"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "sync", "time", "parking_lot"] }
xxhash-rust  = { version = "0.8", features = ["xxh3"] }
tempfile = "3"
moka = { version = "0.12", features = ["future"] }
rand = "0.10"
rand_chacha = "0.10"
pythonize = "0.28"
log = "0.4"
env_logger = "0.11"
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
flate2 = "1.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "fmt", "ansi", "std", "time", "env-filter", "registry"] }
tracing = "0.1"
ignore = "0.4"
zstd = "0.13"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[features]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
default = ["extension-module"]
