[metadata]
name = flowrider
version = 0.1.0
author = fpgaminer
author_email = fpgaminer@bitcoin-mining.com
description = High-performance PyTorch-compatible streaming dataset with distributed caching for on-the-fly remote shard fetching
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache-2.0
license_file = LICENSE
keywords = 
	pytorch
	dataset
	streaming
	distributed
	machine-learning
	deep-learning
	data-loading
	cache
	mds
url = https://github.com/fpgaminer/flowrider
project_urls =
	Source = https://github.com/fpgaminer/flowrider
	Bug Tracker = https://github.com/fpgaminer/flowrider/issues
	Documentation = https://github.com/fpgaminer/flowrider#readme
classifiers = 
	Development Status :: 3 - Alpha
	License :: OSI Approved :: Apache Software License
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Rust
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: System :: Distributed Computing
	Operating System :: POSIX :: Linux
	Operating System :: Unix
	Environment :: GPU

[options]
zip_safe = False
include_package_data = True
package_dir = 
	= src
packages = find:
python_requires = >=3.9
install_requires = 
	numpy

[options.packages.find]
where = src

[options.package_data]
flowrider = 
	*.so
	*.pyd
